[package]
name = "url_defanger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# this is the development version of Yew
yew = {git = "https://github.com/yewstack/yew/", features = ["csr"]}
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"

[dependencies.web-sys]
version = "0.3.64"
features = [
	"console",
	"Window",
	"Navigator",
	"Clipboard",
	"HtmlInputElement",  
	"HtmlDivElement",
]

[dev-dependencies]
pretty_assertions = "1"
